Adds Open Graph tags

--- a/index.html
+++ b/index.html
@@ -2,10 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover"/>
     <title>HandCoin</title>
     <link rel="icon" type="image/svg+xml" href="public/handshake.svg"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"/>
+
+    <!-- Open Graph Meta Tags -->
+    <meta property="og:title" content="HandCoin - Keep your hands busy"/>
+    <meta property="og:description"
+          content="They say money can’t buy love, but HANDCOIN will definitely keep your hands busy."/>
+    <meta property="og:image" content="/handshake.svg"/>
+    <meta property="og:url" content="https://handcoin.vercel.app/"/>
+    <meta property="og:type" content="website"/>
+
 </head>
 <body>
 <div id="root"></div>
