Adds Open Graph image

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:title" content="HandCoin - Keep your hands busy"/>
     <meta property="og:description"
           content="They say money can’t buy love, but HANDCOIN will definitely keep your hands busy."/>
-    <meta property="og:image" content="/handshake.svg"/>
+    <meta property="og:image" content="/handshake.png"/>
     <meta property="og:url" content="https://handcoin.vercel.app/"/>
     <meta property="og:type" content="website"/>
 
